<resources>
    <string name="app_name">Ome</string>
    <string name="create_account">Create account</string>
    <string name="sign_in">Sign in</string>
    <string name="continue_btn">Continue</string>
    <string name="scan_again">Scan Again</string>
    <string name="add_a_stove">Add a Stove</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="what_is_your_name">What is your name?</string>
    <string name="let_s_setup_your_account">Let\'s setup your account</string>
    <string name="email">Email</string>
    <string name="phone_prefix">+1</string>
    <string name="how_can_we_contact_you">How can we contact you?</string>
    <string name="we_don_t_spam_people_it_s_not_nice_phone_number_is_optional">We don\'t spam people, it\'s not nice. Phone number is optional</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_a_password">Enter a password</string>
    <string name="by_clicking_continue_and_creating_an_account_you_agree_to_ome_s_terms_of_service_and_privacy_policy">By clicking continue and creating an account, you agree to <a href="https://www.omekitchen.com/pages/terms">Ome\'s Terms of Service</a> and <a href="https://www.omekitchen.com/pages/privacy-policy"> Privacy Policy</a></string>
    <string name="password_rules">Password must have 9 characters or more and contains at least 3 of the following types: upper-case lower-case, and number.</string>
    <string name="check_email_for_code">Check email for code</string>
    <string name="confirmation_label">Confirmation code sent via email to: email(%1$s) Make sure to check your spam folder</string>
    <string name="confirmation_label_dialog">Confirmation code sent via email to: email(%1$s)</string>
    <string name="resend_code">Resend Code</string>
    <string name="welcome_to_ome">Hello!,\nWelcome to Ome App\nTo use our app to manage.</string>
    <string name="now_let_s_get_information_about_your_stove">Now let\'s get information about your stove.</string>
    <string name="enter_email_to_reset_password">Enter email to reset password</string>
    <string name="password_reset">Your password was successfully reset.</string>
    <string name="back_to_login">Back to Login</string>
    <string name="under_construction">Under construction</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_my_stove">My Stove</string>
    <string name="menu_members">Members</string>
    <string name="menu_profile">Profile</string>
    <string name="account">Account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="membership">Membership</string>
    <string name="change_password">Change Password</string>
    <string name="sign_out">Sign Out</string>
    <string name="delete_account">Delete Account</string>
    <string name="old_password">Old Password</string>
    <string name="newPassword">New Password</string>
    <string name="stove_setup_brand_label">What brand is your stove?</string>
    <string name="gas">Gas</string>
    <string name="electric">Electric</string>
    <string name="take_a_shalf_photo_desc1">Let\'s take a photo of your knob shaft</string>
    <string name="take_a_shalf_photo_desc2">Before taking a picture, make sure to take off one knob as shown above</string>
    <string name="take_photo">Take Photo</string>
    <string name="permission_denied">Permission not granted.</string>
    <string name="how_are_the_burners_on_your_stove_organized">How are the burners on your stove organized?</string>
    <string name="finish">Finish</string>
    <string name="stove_configuration_complete">Stove configuration complete</string>
    <string name="next_nlet_s_setup_your_smart_knob">Next,\nlet\'s setup your smart knob!</string>
    <string name="skip_knob_setup">Skip knob setup</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="settings">Settings</string>
    <string name="show_more">Show More</string>
    <string name="send">Send</string>
    <string name="how_can_we_help">How can we help?</string>
    <string name="select_issue">Select Issue</string>
    <string name="auto_shut_off_settings">Auto Shut-Off Settings</string>
    <string name="current_auto_shut_off_time">Current Auto Shut-Off Time</string>
    <string name="auto_shut_off_warning">Warning: Changes to the auto shut-off timer will apply to ALL Ome Knobs. You accept all responsibility for anything that may happen while your stove remains on when you change the auto shut-off timer.</string>
    <string name="change_auto_shut_off_time">Change Auto Shut-Off Time</string>
    <string name="auto_shut_off_time_change_confirmation">Are you sure you want to change the auto shut-off timer value?</string>
    <string name="warning">Warning!</string>
    <string name="ome_knob_will_rotate">Ome Knob will now rotate itself through the settings. Hang tight! This may take a few seconds.</string>
    <string name="ome_knob_manually_turn_to_the_low">Manually rotate the knob to the LOW position of the Single burner</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="save">Save</string>
    <string name="stove_information">Stove Information</string>
    <string name="change_stove_orientation">Change Stove Orientation</string>
    <string name="change_stove_type">Change Stove Type</string>
    <string name="name">Name</string>
    <string name="stove_image">Stove Image</string>
    <string name="choose_from_phone">Choose from Phone</string>
    <string name="device_settings">Device Settings</string>
    <string name="change_knob_position">Change Knob Position</string>
    <string name="change_wifi">Change Wifi</string>
    <string name="change_knob_orientation">Change Knob Orientation</string>
    <string name="knob_mac_addr_label">MAC ID:%1$s</string>
    <string name="part_1_knob_installation">Part 1: Knob Installation</string>
    <string name="turn_on_your_ome_knob_by_plugging_it_into_power">Turn on your Ome knob by plugging it into power.</string>
    <string name="complete_part_1_of_knob_installation_by_following_these_install_videos">Complete Part 1 of knob installation by following these <a href="https://ome-kitchen.myshopify.com/pages/installation#accord1">install videos</a></string>
    <string name="confirm_that_you_have_completed_part_1_the_adapter_metal_plate_and_metal_plate_cover_should_now_be_installed">Confirm that you have completed Part 1. The adapter, metal plate and metal plate cover should now be installed.</string>
    <string name="your_stove">Your Stove</string>
    <string name="which_burner_would_you_like_to_setup_your_smart_knob_on">Which burner would you like to setup your smart knob on?</string>
    <string name="take_a_picture">Take a Picture</string>
    <string name="knob_in_use">Another user owns this knob you\'ll need to select another or the user will need to remove the knob</string>
    <string name="knob_doesnt_exist">The scanned knob QR code does not exist.  Please try scanning again.  If the issue persists, contact support \n855–663–5227 \nsupport@omekitchen.com</string>
    <string name="scan_the_qr_code_on_the_bottom_of_your_knob">Scan the QR code on the bottom of your knob</string>
    <string name="let_s_connect_to_your_local_wi_fi_network">Let\'s connect to your local Wi-Fi network</string>
    <string name="before_we_connect_label">Before we connect your device to your Wifi, let’s make sure your devices are on and ready.\n\n\n Are your device on?</string>
    <string name="manual_btn">Manual</string>
    <string name="yes_let_s_connect">Yes, let\'s connect</string>
    <string name="permission_not_granted">Permission not granted</string>
    <string name="unable_to_join_the_network">Unable to join the network\n"(%1$s)"</string>
    <string name="connect_to_your_wi_fi">Connect to your Wi-Fi</string>
    <string name="connect_your_phone_to_ome">Connect your phone to Ome</string>
    <string name="manual_setup">Open Wi-Fi settings on your phone and select the network that says either:\n\n"Ome_Knob_1234"\n"Inirv_Knob_1234"\n\nIt may take a moment to appear. If asked for a password, type <b>password</b>. Once you are connected, come back to this screen.</string>
    <string name="manual_connection_to_hotspot_error">The network you connected to is not the knob\'s network (%1$s) or (%2$s). Please make sure you connect to the correct hotspot before continuing.</string>
    <string name="please_select_a_network_for_your_knob_to_connect_with">Please select a network for your knob to connect with</string>
    <string name="ome_smart_knob_will_be_setup_on">Ome Smart Knob will be setup on</string>
    <string name="connect">Connect</string>
    <string name="incorrect_network_name_and_password">Incorrect network name and password combination. Please try again</string>
    <string name="something_went_wrong_when_setting_the_knob">Something went wrong when setting the knob\'s wifi, please try again</string>
    <string name="connection_success">Congratulations! Your knob is now connected to your wifi.</string>
    <string name="part_2_knob_installation">Part 2: Knob Installation</string>
    <string name="now_complete_part_2_label">Now complete Part 2 of installation by following  <a href="https://ome-kitchen.myshopify.com/pages/installation#accord2">these videos.</a></string>
    <string name="confirm_that_you_have_completed_part_2">Confirm that you have completed Part 2. The knob should now be installed on your stove!</string>
    <string name="configure_knob">Configure Knob</string>
    <string name="direction_label">In what direction does your knob rotate when you turn it on?</string>
    <string name="device_calibration_label">Manually turn your knob to %1$s and press continue</string>
    <string name="device_calibration_dual_label">Manually turn your knob to %1$s position for the %2$s zone burner and press continue</string>
    <string name="device_calibration_off_label">Make sure your knob is in the OFF position and press continue</string>
    <string name="device_calibration_confirmation_label">Manually turn your knob to %1$s and press continue</string>
    <string name="calibration_confirmation_label">Is knob at %1$s?</string>
    <string name="confirm_position">Confirm Position</string>
    <string name="confirm_position_body">Are you sure you want to put the knob at burner %1$s ?</string>
    <string name="change_burner_position_success_body">The change burner operation was a success</string>
    <string name="calibration_confirmation_dual_label">Is knob at %1$s for the %2$s zone burner?</string>
    <string name="issue_with_knob_label">There seems to be an issue with your knob. Please contact customer service so we can help! \n 855–663–5227 \n support@omekitchen.com</string>
    <string name="yes_btn">Yes</string>
    <string name="no_btn">No</string>
    <string name="no_change_position_btn">No, change position</string>
    <string name="calibration_labels_error">Labels cannot be placed on top of one another</string>
    <string name="device_calibration_sub_label">**App may take a few seconds to update position**</string>
    <string name="zone_label">What type of burner are you setting up now?</string>
    <string name="counter_clockwise">Counter clockwise</string>
    <string name="clockwise">Clockwise</string>
    <string name="off_position">OFF</string>
    <string name="low_position">LOW</string>
    <string name="medium_position">MED</string>
    <string name="high_position">HIGH</string>
    <string name="setup_smart_knob">Setup Smart Knob</string>
    <string name="skip">Skip</string>
    <string name="do_the_settings_below_match_your_stove_knob">Do the settings below match your stove knob?</string>
</resources>