<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
    tools:context=".ui.welcome.WelcomeFragment">

    <include
        android:id="@+id/include"
        layout="@layout/ome_background_gradient"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/backIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_arrow_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="140dp"
        app:layout_constraintBottom_toBottomOf="@+id/include"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            style="@style/Label.20sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/omeTextInput"
            app:layout_constraintStart_toStartOf="@+id/omeTextInput"
            app:layout_constraintTop_toTopOf="parent" />

        <com.ome.app.ui.views.OmeTextInput
            android:id="@+id/omeTextInput"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="20dp"
            app:hint="@string/enter_email"
            app:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <com.ome.app.ui.views.OmeTextInput
            android:id="@+id/omeTextInput2"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            app:hint="@string/enter_password"
            app:inputType="password"
            app:layout_constraintEnd_toEndOf="@+id/omeTextInput"
            app:layout_constraintStart_toStartOf="@+id/omeTextInput"
            app:layout_constraintTop_toBottomOf="@+id/omeTextInput" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/createAccountBtn"
            style="@style/OmeButton.White"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:text="@string/continue_btn"
            app:layout_constraintEnd_toEndOf="@+id/omeTextInput2"
            app:layout_constraintStart_toStartOf="@+id/omeTextInput2"
            app:layout_constraintTop_toBottomOf="@+id/omeTextInput2"
            app:size="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/forgot_password"
            android:textColor="@drawable/ome_white_transparent_button_color_selector"
            app:layout_constraintEnd_toEndOf="@+id/createAccountBtn"
            app:layout_constraintStart_toStartOf="@+id/createAccountBtn"
            app:layout_constraintTop_toBottomOf="@+id/createAccountBtn" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
