<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="86dp"
        android:src="@drawable/ic_setup_stove"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:layout_marginTop="86dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/ome_gradient_background_checkmark"
        android:padding="6dp"
        android:src="@drawable/ic_check_white_24dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        style="@style/Title.18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/stove_configuration_complete"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView4"
        style="@style/Title.18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:text="@string/next_nlet_s_setup_your_smart_knob"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/finishBtn"
        style="@style/OmeButton.Gradient.WithLoadingState"
        android:layout_width="0dp"
        android:layout_height="44dp"

        android:layout_marginHorizontal="48dp"
        android:layout_marginTop="42dp"
        android:text="@string/finish"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/skipKnobSetupBtn"
        style="@style/OmeButton.Gradient.WithLoadingState"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginHorizontal="48dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/ome_gradient_button_selector"
        android:text="@string/skip_knob_setup"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/finishBtn" />


</androidx.constraintlayout.widget.ConstraintLayout>
