<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
    tools:context=".ui.launch.LaunchFragment">

    <include
        android:id="@+id/include"
        layout="@layout/ome_background_gradient"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/loadingLayout"
        layout="@layout/ome_loading_state"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/backIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_arrow_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="140dp"
        app:layout_constraintBottom_toBottomOf="@+id/include"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            style="@style/Label.20sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/enter_a_password"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/enterPassword"
            app:layout_constraintStart_toStartOf="@+id/enterPassword"
            app:layout_constraintTop_toTopOf="parent" />

        <com.ome.app.ui.views.OmeTextInput
            android:id="@+id/enterPassword"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="20dp"
            app:hint="@string/enter_password"
            app:inputType="password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <com.ome.app.ui.views.OmeTextInput
            android:id="@+id/confirmPassword"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            app:hint="@string/confirm_password"
            app:inputType="password"
            app:layout_constraintEnd_toEndOf="@+id/enterPassword"
            app:layout_constraintStart_toStartOf="@+id/enterPassword"
            app:layout_constraintTop_toBottomOf="@+id/enterPassword" />


        <TextView
            android:id="@+id/passwordRules"
            style="@style/Label.12sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/password_rules"
            android:textColor="@drawable/ome_white_transparent_button_color_selector"
            app:layout_constraintEnd_toEndOf="@+id/continueBtn"
            app:layout_constraintStart_toStartOf="@+id/continueBtn"
            app:layout_constraintTop_toBottomOf="@+id/confirmPassword" />


        <com.apachat.loadingbutton.core.customViews.CircularProgressButton
            android:id="@+id/continueBtn"
            style="@style/OmeButton.White.WithLoadingState"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="18dp"
            android:text="@string/continue_btn"
            app:layout_constraintEnd_toEndOf="@+id/confirmPassword"
            app:layout_constraintStart_toStartOf="@+id/confirmPassword"
            app:layout_constraintTop_toBottomOf="@+id/passwordRules" />

        <!--        <com.google.android.material.button.MaterialButton-->
        <!--            android:id="@+id/continueBtn"-->
        <!--            style="@style/OmeButton.White"-->
        <!--            android:layout_width="0dp"-->
        <!--            android:layout_height="50dp"-->
        <!--            android:layout_marginTop="12dp"-->
        <!--            android:text="@string/continue_btn"-->
        <!--            app:layout_constraintEnd_toEndOf="@+id/omeTextInput2"-->
        <!--            app:layout_constraintStart_toStartOf="@+id/omeTextInput2"-->
        <!--            app:layout_constraintTop_toBottomOf="@+id/omeTextInput2"-->
        <!--            app:size="16sp" />-->

        <TextView
            android:id="@+id/termsAndConditions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/Label.12sp"
            android:layout_marginTop="18dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/by_clicking_continue_and_creating_an_account_you_agree_to_ome_s_terms_of_service_and_privacy_policy"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/continueBtn"
            app:layout_constraintStart_toStartOf="@+id/continueBtn"
            app:layout_constraintTop_toBottomOf="@+id/continueBtn" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
