<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/titleTv"
        style="@style/Title.16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="Connect to your Wi-Fi"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/manualSetupTv"
        style="@style/Label.16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/manual_btn"
        android:clickable="true"
        android:focusable="true"
        android:textColor="@drawable/ome_light_blue_color_selector"
        app:layout_constraintBottom_toBottomOf="@+id/titleTv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/titleTv"
        app:layout_constraintTop_toTopOf="@+id/titleTv" />


    <TextView
        android:id="@+id/label1Tv"
        style="@style/Label.16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="48dp"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:text="@string/let_s_connect_to_your_local_wi_fi_network"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTv" />


    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="72dp"
        android:src="@drawable/ic_router"
        app:layout_constraintEnd_toEndOf="@+id/label1Tv"
        app:layout_constraintStart_toStartOf="@+id/label1Tv"
        app:layout_constraintTop_toBottomOf="@+id/label1Tv" />

    <TextView
        android:id="@+id/label2Tv"
        style="@style/Label.16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="48dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/before_we_connect_label"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />


    <com.apachat.loadingbutton.core.customViews.CircularProgressButton
        android:id="@+id/connectBtn"
        style="@style/OmeButton.Gradient.WithLoadingState"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        android:layout_marginHorizontal="32dp"
        android:gravity="center"
        android:textAllCaps="true"
        android:text="@string/yes_let_s_connect"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label2Tv"
        app:layout_constraintVertical_bias="1.0"/>

</androidx.constraintlayout.widget.ConstraintLayout>
