<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <TextView
        android:id="@+id/titleTv"
        style="@style/Title.16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:gravity="center"
        android:text="@string/part_2_knob_installation"
        android:textColor="@color/black"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/labelTv"
        style="@style/Label.16sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="48dp"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:text="@string/now_complete_part_2_label"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTv" />


    <ImageView
        android:id="@+id/imageIv"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="64dp"
        android:src="@drawable/ic_knob_installataion_manual1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelTv" />

    <com.apachat.loadingbutton.core.customViews.CircularProgressButton
        android:id="@+id/continueBtn"
        style="@style/OmeButton.Gradient"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        android:gravity="center"
        android:text="@string/continue_btn"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageIv"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>
